production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argo-demo-ingress-prd
spec:
  rules:
  - host: argo-prd.demo.info
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: demo-service
            port:
              number: 80
      - path: /css/
        pathType: Prefix 
        backend:
          service:
            name: demo-service
            port:
              number: 80
      - path: /js/
        pathType: Prefix 
        backend:
          service:
            name: demo-service
            port:
              number: 80
